# advanced-rag

./: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
notebooks/: Entities_Relationships.txt  graph_rag.ipynb  knowladge_graph.ipynb  load_documents.ipynb  passing_scores_parser.ipynb  rag_exemple.ipynb  text_splitting.ipynb
src/: config.py
src/api_v1/: app.py  container.py
src/misc/: file_loaders.py
src/rag/: __init__.py  chain.py  chain_factory.py  engine.py  factories.py  helpers.py  provider.py  providers.py  utils.py
src/schemas/: __init__.py  answer.py  chat.py  question.py
src/services/: chat.py
static/chanks/: Беларусь.txt  Вместо ЕГЭ.txt  Вступительные испытания.txt  Высокие доп.баллы.txt  Доп.испытания-1.txt  Доп.испытания-2.txt  Достижения-1.txt  Достижения-2.txt  Количество организаций, специальностей.txt  Конкурсные списки.txt  Контактная информация Гвардия.txt  Контактная информация.txt  Минимальный балл ЗФО-1.txt  Минимальный балл ЗФО-2.txt  Минимальный балл О-ЗФО-1.txt  Минимальный балл О-ЗФО-2.txt  Минимальный балл ОФО-1.txt  Минимальный балл ОФО-2.txt  О ТИУ.txt  Общие положения 1.1.txt  Общие положения 1.11.txt  Общие положения 1.12-1.16.txt  Общие положения 1.2.txt  Общие положения 1.3-1.4.txt  Общие положения 1.5.txt  Общие положения 1.6.txt  Общие положения 1.7.txt  Общие положения 1.8.txt  Общие положения 1.9-1.10.txt  Особые права-1.txt  Особые права-2.txt  Преимущества.txt  Приём на обучение.txt  СНО задачи.txt  СНО членство.txt  СНО.txt  Спорт.txt  Спортивные мероприятия.txt  Студенческий городок.txt
(+9 files in other folders)
